style.css
/* ... */
@media screen and (min-width:983px) {
  header h2 {
    display: none;
  }
  
  footer .social {
    margin-left: 250px;
  }
  
  .rfbstore-footer .rfbstore-footer_content {
    margin-left: 272px;
  }
  
  /* other styles -- desktop */
  
  .nav {
    display: block;
    height: 120%;
    width: 250px;
    position: fixed;
    z-index: 3;
    top: -60px;
    left: 0;
    background-color: #15152A;
    overflow: auto;
    padding-top: 60px;
    transition: .4s;
    font-family: 'Poppins', sans-serif;
    box-shadow: 2px 0 3px #00FFBA52;
  }
  .nav .buttons h2 {
    display: none;
  }
  .nav .buttons a {
    display: block;
    padding: 20px 20px;
    font-size: 20px;
    text-decoration: none;
  }
  .nav .buttons a h3 {
    transition-duration: .3s;
  }
  .nav .buttons a h3:hover {
    color: #00ccff;
    margin-left: 10px;
  }
  .nav .buttons a h3 img {
    margin-bottom: -6px;
  }
  .nav h2.close {
    position: absolute;
    top: -16px;
    right: 16px;
    margin-left: 50px;
    font-size: 40px;
  }
  .nav .line {
    display: none;
  }
  .nav .social {
    display: none;
  }
  .body {
    display: block;
    left: 250px;
  }
}

/* other styles -- mobile */

img {
  image-rendering: pixelated;
  overflow: hidden;
}

hr {
  height: .5px;
  border: none;
  background: #c2c2c2;
}

.loader {
  background-color: #0f0f19;
  z-index: 2147483647;
  position: fixed;
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.loader img {
  width: 325px;
  height: 590px;
}
.loader.hidden {
  animation: loaded 1s;
  animation-fill-mode: forwards;
}

.popup {
  display: flex;
  position: fixed;
  width: 100%;
  min-height: calc(95vh - 70px);
  background-color: #00000052;
  align-items: flex-end;
  justify-content: center;
}
.popup .ui {
  display: flex;
  height: 100px;
  width: 95%;
  margin-left: auto;
  margin-right: auto;
  border-radius: 25px;
  background-image: linear-gradient(to right, #272747 , #0d0024);
  flex-direction: row;
  align-items: center;
}
.popup .ui a {
  display: flex;
  height: 100px;
  text-decoration: none;
  flex-direction: row;
  align-items: center;
}
.popup .ui .img {
  display: flex;
  height: 100%;
  width: 75px;
  margin-left: 15px;
  margin-right: 15px;
  align-items: center;
  justify-content: center;
}
.popup .ui .img img {
  height: 70%;
}
.popup .ui .txt {
  display: flex;
  width: 200px;
  height: 80px;
  margin-right: auto;
  flex-direction: column;
  align-items: flex-start;
}
.popup .ui .txt .rftnw {
  font-weight: bold;
}
.popup .ui .txt .rftnw h3 {
  margin: 0px;
  color: white;
}
.popup .ui .txt .subtitle h4 {
  font-weight: normal;
  margin: 0px;
  color: #b8b8b8;
}
.popup .ui .txt .subtitle h4 img {
  height: 10px;
  width: 10px;
}
.popup .ui .close {
  display: flex;
  width: 20px;
  height: 20px;
  margin-right: 25px;
  margin-left: 5px;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}
.popup .ui .close img {
  width: 20px;
  height: 20px;
}

.body {
  margin-top: 66px;
  min-height: calc(75vh - 70px);
  margin-right: auto;
  margin-left: auto;
}
.body .apply {
  position: relative;
}
.body .apply img {
  filter: brightness(40%);
}
.body .apply h2 {
  position: absolute;
  top: 10%;
  left: 8%;
}
.body .apply h5 {
  position: absolute;
  top: 30%;
  right: 10%;
  left: 10%;
}
.body .apply a button {
  position: absolute;
  top: 70%;
  right: 5%;
  color: #000000;
  background-color: #50faee;
  font-size: 16px;
  padding: 10px 20px;
  border-radius: 5px;
  border: 1px solid #50faee;
  transition-duration: .2s;
}
.body .apply a button:hover {
  background-color: #0c958c;
  border: 1px solid #024c47;
  color: #ffffff;
}
.body .rfb-store {
  position: relative;
  background-color: #00FFBA9F;
  border: 3px solid #00FFBA;
  border-radius: 10px;
  margin: 5px;
  margin-top: 20px;
  height: 280px;
}
.body .rfb-store a img {
  width: 100px;
  height: 100px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  transition-duration: .5s;
}
.body .rfb-store a img:hover {
  transform: rotate(10deg);
}
.body .rfb-store h2 {
  text-align: center;
  margin-top: 10px;
  margin-bottom: 5px;
  color: #000;
}
.body .rfb-store h5 {
  text-align: center;
  margin-left: 5%;
  margin-right: 5%;
  color: #000;
}
.body .rfb-store a button:hover {
  background-color: #02a8d2;
  border: 1px solid #0088aa;
  color: #fff;
}
.body .contact {
  position: relative;
  background-color: #FFEB009F;
  border: 3px solid #FFEB00;
  border-radius: 10px;
  margin: 5px;
  margin-top: 20px;
  margin-bottom: 20px;
  height: 265px;
}
.body .contact a img {
  width: 100px;
  height: 100px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  transition-duration: .5s;
}
.body .contact a img:hover {
  transform: rotate(35deg);
}
.body .contact h2 {
  text-align: center;
  margin-top: 10px;
  margin-bottom: 5px;
  color: #000;
}
.body .contact h5 {
  text-align: center;
  margin-left: 5%;
  margin-right: 5%;
  color: #000;
}
.body .contact a button {
  position: absolute;
  left: 16px;
  margin-top: 15px;
  background-color: #ffba00;
  color: #000;
  border: 1px solid #ffba00;
  padding: 10px 20px;
  font-size: 16px;
  border-radius: 5px;
  transition-duration: .2s;
}
.body .contact a button:hover {
  background-color: #E2A400;
  border: 1px solid #B38200;
  color: #fff;
}
.body .ready-apply h1 {
  margin-top: 25px;
  text-align: center;
  transition-duration: .5s;
}
.body .ready-apply h1:hover {
  color: #00ccff;
  transform: scale(1.1, 1.11);
}
.body .apply-button {
  position: relative;
  margin-top: 90px;
  height: 70px;
}
.body .apply-button a button {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  background-color: #00ccff;
  border: 3px solid #00ccff;
  padding: 5px;
  border-radius: 2px;
  font-size: 16px;
  transition-duration: .5s;
}
/* ... */

